--- a/football_management/src/main/resources/templates/player/list.html
+++ b/football_management/src/main/resources/templates/player/list.html
@@ -64,18 +64,19 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="player,stt : ${playerList.content}">
-                    <th align="center" scope="row" th:text="${stt.count + playerList.number*playerList.size}"></th>
+                <tr th:each="player,stt : ${playerList}">
+<!--                    <th align="center" scope="row" th:text="${stt.count + playerList.number*playerList.size}"></th>-->
+                    <td th:text="${player.id}"></td>
                     <td th:text="${player.name}"></td>
                     <td th:text="${player.dateOfBirth}"></td>
                     <td th:text="${player.age}"></td>
                     <td th:text="${player.position}"></td>
-                    <td th:text="${player.expenrience}"></td>
+                    <td th:text="${player.experience}"></td>
                     <td th:text="${player.nation.country}"></td>
                     <td>
                         <button type="button"
                                 th:attr="onclick=|getFacilityInfo('${player.name}','${player.dateOfBirth}','${player.age}',
-                                '${player.position}','${player.expenrience}','${player.nation.country}')|"
+                                '${player.position}','${player.experience}','${player.nation.country}')|"
                                 class="btn btn-light" data-bs-toggle="modal" data-bs-target="#editService">
                             <img src="https://img.icons8.com/external-anggara-basic-outline-anggara-putra/24/null/external-create-social-media-interface-anggara-basic-outline-anggara-putra.png"/>
                         </button>
