--- a/ss9_AOP/src/main/resources/templates/player/error.html
+++ b/ss9_AOP/src/main/resources/templates/player/error.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p><a href="/">Quay lại trang danh sách</a></p>
-<h1 style="color: red">Xin lỗi bạn, số lượng cầu thủ đăng kí không vượt quá 11 cầu thủ.</h1>
+<p><a href="/player/list">Quay lại trang danh sách</a></p>
+<h1 style="color: red">Cầu thủ đăng kí vượt quá 11 cầu thủ. Vui lòng chọn lại!!</h1>
 </body>
 </html>
