--- a/ss10_cookie/demo/src/main/resources/templates/player/list.html
+++ b/ss10_cookie/demo/src/main/resources/templates/player/list.html
@@ -18,7 +18,7 @@
         <div class="card custom-card text-center mr-2 mt-2 ml-2 mb-2"
              style="width: 15rem; display: inline-block">
             <div class="card-body">
-                <p><img src="/anh.jpeg" width="120"/></p>
+                <p><img src="E:\HOC TAP\CODEGYM\module4-a1\Legends-Profile_Wayne-Rooney1523460268000.jpg" width="120"/></p>
                 <p class="card-text" th:text="${item.name}">Name</p>
 
                 <a th:href="@{/detail/__${item.id}__}"
